# cirq-py

./: .gitignore  Makefile  pyproject.toml
cirq/: __main__.py
cirq/commands/: __init__.py  cirq.py  destroy.py  doctor.py  generate.py  info.py  init.py  new.py  version.py
tests/: test_cirq.py
